my try to scale

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
   <title>Todolist</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
   <div class="container">
     <header>
       <h1 class="logo-title">my<span class="sub-logo">todo</span>list</h1>
-      <form >
+      <form>
         <input placeholder="add a new task here..."class="task-input" type="text" name="" value="">
         <a href="#" class="add-btn">+</a>
       </form>
@@ -27,8 +27,8 @@
 
 
   </div>
-
-
-<script src="./app.js" charset="utf-8"></script>
+<script src="./assets/js/controller.js" charset="utf-8"></script>
+<script src="./assets/js/view.js" charset="utf-8"></script>
+<script src="./assets/js/app.js" charset="utf-8"></script>
 </body>
 </html>
